--- a/pom.xml
+++ b/pom.xml
@@ -51,11 +51,20 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-tx</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>ru.anr</groupId>
             <artifactId>base.utils</artifactId>
             <version>${base.utils.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ru.anr</groupId>
+            <artifactId>base.tests</artifactId>
+            <version>${base.tests.version}</version>
         </dependency>
 
         <!-- TESTS -->
@@ -68,6 +77,7 @@
 
     <properties>
         <base.utils.version>0.0.1-SNAPSHOT</base.utils.version>
+        <base.tests.version>0.0.1-SNAPSHOT</base.tests.version>
     </properties>
 
 </project>
