--- a/pom.xml
+++ b/pom.xml
@@ -129,7 +129,10 @@
         	<groupId>org.codehaus.woodstox</groupId>
         	<artifactId>woodstox-core-asl</artifactId>
         </dependency>
-        
+		<dependency>
+		    <groupId>com.fasterxml.jackson.datatype</groupId>
+		    <artifactId>jackson-datatype-jsr310</artifactId>
+		</dependency>        
 
         <!-- Internal dependencies -->
         <dependency>
