--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -2,7 +2,7 @@
 spring.profiles.active=developers
 
 # Database
-db.driverClassName=org.hsqldb.jdbcDriver
-db.url=jdbc:hsqldb:mem:testdb
-db.user=sa
-db.password=
+db.driverClass=${db.driverClass}
+db.url=${db.url}
+db.user=${db.user}
+db.password=${db.password}
