Added a mock implementation for API Factory. It can be used in web application development to emulate API backend.

--- a/pom.xml
+++ b/pom.xml
@@ -160,7 +160,11 @@
 		<dependency>
 		    <groupId>com.fasterxml.jackson.datatype</groupId>
 		    <artifactId>jackson-datatype-jsr310</artifactId>
-		</dependency>        
+		</dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>        
+        </dependency>        
 
         <!-- Internal dependencies -->
         <dependency>
