--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,10 @@
           <artifactId>spring-security-aspects</artifactId>        
         </dependency>                    
         <dependency>
+          <groupId>org.springframework.security</groupId>
+          <artifactId>spring-security-acl</artifactId>        
+        </dependency>                    
+        <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjrt</artifactId>
         </dependency>
