--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
                             <includes>
                                 <include>**/META-INF/persistence-local.xml</include>
                                 <include>**/BaseLocal*TestCase*</include>
-                                <include>**/BaseLocalDaoConfig*</include>
+                                <include>**/AbstractLocalDaoConfig*</include>
                                 <include>**/domain/Samples*</include>
                             </includes>
                         </configuration>
