--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,7 @@
         <dependency>
            <groupId>javax.el</groupId>
            <artifactId>javax.el-api</artifactId>
+           <scope>provided</scope>
         </dependency>
         <dependency>
            <groupId>org.glassfish.web</groupId>
