--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -2,7 +2,7 @@
 spring.profiles.active=developers
 
 # Database
-db.driverClass=${db.driverClass}
-db.url=${db.url}
-db.user=${db.user}
-db.password=${db.password}
+db.driverClass=${dbx.driverClass}
+db.url=${dbx.url}
+db.user=${dbx.user}
+db.password=${dbx.password}
