Written a couple of tests to understand how Spring works with environmental variables and their substitutions.

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -8,3 +8,9 @@ db.user=${dbx.user}
 db.password=${dbx.password}
 
 USER=nemo
+
+
+# Overriding inside
+value1=12345
+value2=${value1}
+value3=${USER}
