--- a/pom.xml
+++ b/pom.xml
@@ -105,7 +105,7 @@
         </dependency>
         <dependency>
             <groupId>net.sf.ehcache</groupId>
-            <artifactId>ehcache</artifactId>
+            <artifactId>ehcache-core</artifactId>
         </dependency>       
         <dependency>
             <artifactId>hibernate-ehcache</artifactId>
