--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,14 @@
     <parent>
         <groupId>ru.anr</groupId>
         <artifactId>base.platform.parent</artifactId>
-        <version>0.5-SNAPSHOT</version>
+        <version>1.0.0</version>
     </parent>
 
     <artifactId>base.services</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
 
     <name>Base Services</name>
-    <description>A base classes for business logic implementation</description>
+    <description>A set of base classes for business logic implementations</description>
 
     <licenses>
         <license>
@@ -213,10 +214,12 @@
         <dependency>
             <groupId>ru.anr</groupId>
             <artifactId>base.utils</artifactId>
+            <version>1.0.0</version>
         </dependency>
         <dependency>
             <groupId>ru.anr</groupId>
             <artifactId>base.tests</artifactId>
+            <version>1.0.0</version>
         </dependency>
 
         <!-- TESTS -->
