--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
     <parent>
         <groupId>ru.anr</groupId>
         <artifactId>base.platform.parent</artifactId>
-        <version>1.0.0</version>
+        <version>2.0.x-SNAPSHOT</version>
     </parent>
 
     <artifactId>base.services</artifactId>
-    <version>1.0.3-SNAPSHOT</version>
+    <version>2.0.0-SNAPSHOT</version>
 
     <name>Base Services</name>
     <description>A set of base classes for business logic implementations</description>
@@ -78,8 +78,7 @@
            <extension>
               <groupId>io.packagecloud.maven.wagon</groupId>
               <artifactId>maven-packagecloud-wagon</artifactId>
-              <version>0.0.6</version>
-           </extension>           
+           </extension>
         </extensions>
     </build>
 
@@ -111,10 +110,6 @@
           <artifactId>spring-security-acl</artifactId>        
         </dependency>                    
         <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-entitymanager</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-orm</artifactId>
         </dependency>
@@ -127,17 +122,9 @@
             <artifactId>spring-jdbc</artifactId>
         </dependency>
         <dependency>
-            <groupId>net.sf.ehcache</groupId>
-            <artifactId>ehcache-core</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>net.sf.ehcache</groupId>
-            <artifactId>ehcache-jmsreplication</artifactId>
-        </dependency>
-        <dependency>
-            <artifactId>hibernate-ehcache</artifactId>
             <groupId>org.hibernate</groupId>
-        </dependency>        
+            <artifactId>hibernate-ehcache</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework.security</groupId>
@@ -152,21 +139,11 @@
             <artifactId>spring-security-oauth2</artifactId>
         </dependency>
         <dependency>
-           <groupId>org.hibernate</groupId>
-           <artifactId>hibernate-validator</artifactId>
-        </dependency>
-        <dependency>
            <groupId>javax.el</groupId>
            <artifactId>javax.el-api</artifactId>
            <scope>provided</scope>
         </dependency>
-        <dependency>
-           <groupId>org.glassfish.web</groupId>
-           <artifactId>javax.el</artifactId>
-           <scope>provided</scope>
-        </dependency>
-        
-        
+
         <!-- JSON/XML serializarion tools -->
         <dependency>
         	<groupId>com.fasterxml.jackson.core</groupId>
@@ -184,10 +161,6 @@
           <groupId>com.fasterxml.jackson.dataformat</groupId>
           <artifactId>jackson-dataformat-xml</artifactId>
         </dependency>        
-        <dependency>
-        	<groupId>org.codehaus.woodstox</groupId>
-        	<artifactId>woodstox-core-asl</artifactId>
-        </dependency>
 		<dependency>
 		    <groupId>com.fasterxml.jackson.datatype</groupId>
 		    <artifactId>jackson-datatype-jsr310</artifactId>
@@ -214,12 +187,12 @@
         <dependency>
             <groupId>ru.anr</groupId>
             <artifactId>base.utils</artifactId>
-            <version>${base.utils.version}</version>
+            <version>2.0.x-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>ru.anr</groupId>
             <artifactId>base.tests</artifactId>
-            <version>1.0.0</version>
+            <version>2.0.x-SNAPSHOT</version>
         </dependency>
 
         <!-- TESTS -->
@@ -240,11 +213,9 @@
         
         <dbx.url>jdbc:hsqldb:mem:testdb</dbx.url>
         <dbx.user>sa</dbx.user>
-        <dbx.password></dbx.password>
+        <dbx.password />
         <dbx.driverClass>org.hsqldb.jdbcDriver</dbx.driverClass>
         <dbx.hibernateDialect>org.hibernate.dialect.HSQLDialect</dbx.hibernateDialect>
-        
-        <base.utils.version>1.0.1</base.utils.version>
         
     </properties>
 
