--- a/pom.xml
+++ b/pom.xml
@@ -3,9 +3,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>ru.anr</groupId>
+        <groupId>org.anrruf</groupId>
         <artifactId>base.platform.parent</artifactId>
-        <version>2.0.0-SNAPSHOT</version>
+        <version>2.0.1</version>
     </parent>
 
     <artifactId>base.services</artifactId>
@@ -171,12 +171,12 @@
 
         <!-- Internal dependencies -->
         <dependency>
-            <groupId>ru.anr</groupId>
+            <groupId>org.anrruf</groupId>
             <artifactId>base.utils</artifactId>
             <version>2.0.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>ru.anr</groupId>
+            <groupId>org.anrruf</groupId>
             <artifactId>base.tests</artifactId>
             <version>2.0.0-SNAPSHOT</version>
         </dependency>
