--- a/pom.xml
+++ b/pom.xml
@@ -128,7 +128,7 @@
             <artifactId>spring-security-oauth2</artifactId>
         </dependency>
 
-        <!-- JSON/XML serializarion tools -->
+        <!-- JSON/XML serialization tools -->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
@@ -191,12 +191,12 @@
         <dependency>
             <groupId>org.anrruf</groupId>
             <artifactId>base.utils</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
+            <version>2.0.0-SNAPSHOT-84d1b9e</version>
         </dependency>
         <dependency>
             <groupId>org.anrruf</groupId>
             <artifactId>base.tests</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
+            <version>2.0.0-SNAPSHOT-c19b9fd</version>
         </dependency>
 
         <!-- TESTS -->
