--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.anrruf</groupId>
         <artifactId>base.platform.parent</artifactId>
-        <version>2.5.0-SNAPSHOT</version>
+        <version>2.5.0</version>
     </parent>
 
     <artifactId>base.services</artifactId>
@@ -183,12 +183,12 @@
         <dependency>
             <groupId>org.anrruf</groupId>
             <artifactId>base.utils</artifactId>
-            <version>2.5.0-SNAPSHOT</version>
+            <version>2.5.0</version>
         </dependency>
         <dependency>
             <groupId>org.anrruf</groupId>
             <artifactId>base.tests</artifactId>
-            <version>2.5.0-SNAPSHOT</version>
+            <version>2.5.0</version>
         </dependency>
 
         <!-- TESTS -->
