--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
     <parent>
         <groupId>org.anrruf</groupId>
         <artifactId>base.platform.parent</artifactId>
-        <version>2.5.0</version>
+        <version>2.6.0</version>
     </parent>
 
     <artifactId>base.services</artifactId>
-    <version>2.5.0-SNAPSHOT</version>
+    <version>2.6.0-SNAPSHOT</version>
 
     <name>Base Services</name>
     <description>A set of base classes for business logic implementations</description>
@@ -112,10 +112,12 @@
         <dependency>
             <groupId>javax.el</groupId>
             <artifactId>javax.el-api</artifactId>
+            <version>${javax.el-api.version}</version>
         </dependency>
         <dependency>
             <groupId>org.glassfish</groupId>
             <artifactId>jakarta.el</artifactId>
+            <version>${glassfish.javax.el.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
@@ -125,7 +127,8 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-core</artifactId>
         </dependency>
-        <!-- TODO: migrate to Spring Security (https://github.com/spring-projects/spring-security/wiki/OAuth-2.0-Migration-Guide) -->
+        <!-- TODO: migrate to Spring Security:
+             (https://github.com/spring-projects/spring-security/wiki/OAuth-2.0-Migration-Guide) -->
         <dependency>
             <groupId>org.springframework.security.oauth</groupId>
             <artifactId>spring-security-oauth2</artifactId>
@@ -135,22 +138,37 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
+            <version>${jackson.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
+            <version>${jackson.databind.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.module</groupId>
             <artifactId>jackson-module-jaxb-annotations</artifactId>
+            <version>${jackson.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-xml</artifactId>
+            <version>${jackson.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.jaxrs</groupId>
+            <artifactId>jackson-jaxrs-json-provider</artifactId>
+            <version>${jackson.version}</version>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
@@ -173,33 +191,37 @@
         <dependency>
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
+            <version>${javax.validation}</version>
         </dependency>
         <dependency>
             <groupId>javax.annotation</groupId>
             <artifactId>javax.annotation-api</artifactId>
+            <version>${jsr250-api.version}</version>
         </dependency>
 
         <!-- Internal dependencies -->
         <dependency>
             <groupId>org.anrruf</groupId>
             <artifactId>base.utils</artifactId>
-            <version>2.5.0</version>
+            <version>${base.utils.version}</version>
         </dependency>
         <dependency>
             <groupId>org.anrruf</groupId>
             <artifactId>base.tests</artifactId>
-            <version>2.5.0</version>
+            <version>${base.tests.version}</version>
         </dependency>
 
         <!-- TESTS -->
         <dependency>
             <groupId>org.hsqldb</groupId>
             <artifactId>hsqldb</artifactId>
+            <version>${hsqldb.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.mchange</groupId>
             <artifactId>c3p0</artifactId>
+            <version>${c3p0.version}</version>
             <scope>test</scope>
         </dependency>
 
@@ -213,6 +235,19 @@
         <dbx.driverClass>org.hsqldb.jdbcDriver</dbx.driverClass>
         <dbx.hibernateDialect>org.hibernate.dialect.HSQLDialect</dbx.hibernateDialect>
 
+        <hsqldb.version>2.7.2</hsqldb.version>
+        <c3p0.version>0.9.5.5</c3p0.version>
+
+        <jsr250-api.version>1.3.2</jsr250-api.version>
+        <javax.el-api.version>3.0.0</javax.el-api.version>
+        <glassfish.javax.el.version>3.0.4</glassfish.javax.el.version>
+        <javax.validation>2.0.1.Final</javax.validation>
+
+        <jackson.version>2.15.2</jackson.version>
+        <jackson.databind.version>2.15.2</jackson.databind.version>
+
+        <base.utils.version>2.6.0</base.utils.version>
+        <base.tests.version>2.6.0</base.tests.version>
     </properties>
 
 </project>
